--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Document</title>
+    <title>Evan Rodgers | CS Student</title>
 </head>
 </button>
 <body>
