Added fractcal page

--- a/dark.html
+++ b/dark.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Evan Rodgers | CS Student</title>
-    <a href="fractalTree.html">Fractal</a>
 </head>
-
+</button>
 <body>
     <div id="dragable">
         <div id="a">
