Fixed CSS link in index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lesson 4 | CSS &amp; Page Layout</title>
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="../CSS/main2.css">
 </head>
 
 <body>
