Title change for index, worked on fractal js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 4 | CSS &amp; Page Layout</title>
+    <title>Evan Rodgers | CS</title>
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../CSS/main2.css">
@@ -41,7 +41,7 @@
                     laborum!
                 </p>
 
-                <a href="https://www.linkedin.com/in/evan-rodgers/" class="btn">About Me</a>
+                <a href="https://www.linkedin.com/in/evan-rodgers/" target="_blank" class="btn">About Me</a>
 
             </div><!-- sideleft -->
 
@@ -87,21 +87,21 @@
         <div class="container">
             <div class="box">
                 <i class="fas fa-graduation-cap fa-2x"></i>
-                <h4><a href="https://www.wwu.edu/">WWU</a></h4>
+                <h4><a href="https://www.wwu.edu/" target="_blank">WWU</a></h4>
                 <p>
                     Western Washington University
                 </p>
             </div><!-- box -->
             <div class="box">
                 <i class="fab fa-linkedin fa-2x"></i>
-                <h4><a href="https://www.linkedin.com/in/evan-rodgers/">LinkedIn</a></h4>
+                <h4><a href="https://www.linkedin.com/in/evan-rodgers/" target="_blank">LinkedIn</a></h4>
                 <p>
                     Visit my LinkedIn profile, connect with me!
                 </p>
             </div><!-- box -->
             <div class="box">
                 <i class="fab fa-twitch fa-2x"></i>
-                <h4><a href="">Twitch</a></h4>
+                <h4><a href="" target="_blank">Twitch</a></h4>
                 <p>
                     Come watch me stream beatsaber
                 </p>
