--- a/fractalTree.html
+++ b/fractalTree.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../CSS/fractalStyle.css">
-    <title>Fractal</title>
+    <title>Evan Rodgers | Fractal</title>
 </head>
 <body>
     <header>
@@ -19,9 +19,9 @@
         <div id="displayLength"></div>
         <input type="range" min="1" max="20" value="5" id="slider-branch" class="slider">
         <div id="displayBranch"></div>
-        <input type="range" min="1" max="8" value="8" id="slider-left" class="slider">
+        <input type="range" min="0" max="8" value="8" id="slider-left" class="slider">
         <div id="displayLeft"></div>
-        <input type="range" min="1" max="8" value="8" id="slider-right" class="slider">
+        <input type="range" min="0" max="8" value="8" id="slider-right" class="slider">
         <div id="displayRight"></div>
     </header>
 
