--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="css/fade.css">
 </head>
 
 <body>
@@ -19,10 +20,10 @@
                 <label for="toggle" class="label"><i class="fas fa-bars"></i></label>
                 <input type="checkbox" id="toggle">
                 <ul class="menu">
-                    <li class="lines"> <a href="index.html">Home</a> </li>
-                    <li class="lines"> <a href="fractalTree.html">Frac</a> </li>
-                    <li class="lines"> <a href="clips.html">Clips</a> </li>
-                    <li class="lines"> <a href="contact.html">About me</a> </li>
+                    <li class="lines FadeIn1"> <a href="index.html">Home</a> </li>
+                    <li class="lines FadeIn2"> <a href="fractalTree.html">Frac</a> </li>
+                    <li class="lines FadeIn3"> <a href="clips.html">Clips</a> </li>
+                    <li class="lines FadeIn4"> <a href="">About me</a> </li>
                 </ul>
             </nav>
         </div>
@@ -43,11 +44,15 @@
                     <h4 class="sub-heading">Breif Summary</h4>
                     <h2 class="heading">About</h2>
                     <p>
-                        I am currently a student at Western Washington University, studying computer science. My interest began senior year of high school while enrolled in an advanced computer science class. I enjoy working on computers, whether it be building one for my younger brother or programming in an IDE.
+                        I am currently a student at Western Washington University, studying computer science. My
+                        interest began senior year of high school while enrolled in an advanced computer science class.
+                        I enjoy working on computers, whether it be building one for my younger brother or programming
+                        in an IDE.
                         I love a good challenge | puzzle.
                     </p>
                     <p>
-                        <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button">More about me</a>
+                        <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button">More about
+                            me</a>
                     </p>
                 </div>
                 <div class="sideright">
@@ -59,20 +64,50 @@
         <section class="main-padding">
             <div class="container">
                 <div class="feature">
-                    <h4 class="sub-heading">Interests </h4>
-                    <h2 class="heading">Hobby</h2>
+                    <h4 class="sub-heading">Academic history</h4>
+                    <h2 class="heading">Courses</h2>
                 </div>
                 <div class="feature-image">
-                    <img src="images/keyboard.jpg" alt="">
-                    <img src="images/vr.jpg" alt="">
-                    <img src="images/wall.jpg" alt="">
-            </div>
+                    <div class="feature-item">
+                        <h2>Computer Mediated Communications</h2>
+                        <p>Introduction to the tools and technologies of modern responsive web design using HTML5 and
+                            CSS3; an introduction to JavaScript.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h2>Computer programming I</h2>
+                        <p>Introduction to algorithms, elements of a programming language, including data types,
+                            packages, control structures, procedures and functions, basic input and output, arrays and
+                            records, text files, strings, variant records.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h2>Computer Programming and Linear Data Structures</h2>
+                        <p>Abstract data types, generics, access or pointer types, dynamic memory allocation, recursion,
+                            concurrent programming and linear data structures, including stacks, lists and queues.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h2>Data Structures</h2>
+                        <p>Design and implementation of hash tables, general trees, search trees, balanced trees and
+                            graphs. Comparison of sorting algorithms. Evaluation of the best data structure for a
+                            particular task.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h2>Computer Systems I</h2>
+                        <p>Binary data representation, the assembly and machine language representations of executable
+                            code, memory hierarchies, process memory organization, and program linking.</p>
+                    </div>
+                    <div class="feature-item">
+                        <h2>Formal Lang & Functional Programming</h2>
+                        <p>Proof techniques. Introduction to the formal language classes and their machines, including
+                            regular languages and finite automata, context free languages and pushdown automata.</p>
+                    </div>
+                </div>
         </section>
         <div class="clearfix"></div>
         <section class="newsletter">
             <div class="container newsletter-grid">
                 <h1>Connect with me</h1>
-                    <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button"><i
+                        class="fab fa-linkedin-in"></i></a>
             </div>
         </section>
         <footer class="main-footer" id="footer-section">
@@ -89,13 +124,13 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, inventore.</p>
                 </div>
                 <div class="footer">
-                    <h4 class="sub-heading">CONNECT WITH US</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. Maxime, odio. </p>
+                    <h4 class="sub-heading">CONNECT WITH ME</h4>
+                    <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button"><i
+                        class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="copyright">
-                <i class="far fa-copyright">Copyright 2022 All rights reserved | Evan Rodgers</i>
+                <i class="far fa-copyright"> Copyright 2022 All rights reserved | Evan Rodgers</i>
             </div>
         </footer>
     </main>
