Color theme added smooth trasnsition, fixed nav for phone display.

--- a/fractalTree.html
+++ b/fractalTree.html
@@ -17,10 +17,11 @@
                 <label for="toggle" class="label"><i class="fas fa-bars"></i></label>
                 <input type="checkbox" id="toggle">
                 <ul class="menu">
-                    <li class="lines"> <a href="index.html">Home</a> </li>
-                    <li class="lines"> <a href="fractalTree.html">Frac</a> </li>
-                    <li class="lines"> <a href="clips.html">Clips</a> </li>
-                    <li class="lines"> <a href="contact.html">About me</a> </li>
+                    <li class="tl lines"> <a href="index.html">Home</a> </li>
+                    <li class="tl lines"> <a href="courses.html">Courses</a></li>
+                    <li class="tl lines"> <a href="hobby.html">Hobby</a></li>
+                    <li class="tl lines"> <a href="clips.html">Clips</a> </li>
+                    <li class="tl lines"> <a href="fractalTree.html">Frac</a> </li>
                 </ul>
             </nav>
         </div>
