--- a/clips.html
+++ b/clips.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,10 +21,11 @@
                 <label for="toggle" class="label"><i class="fas fa-bars"></i></label>
                 <input type="checkbox" id="toggle">
                 <ul class="menu">
-                    <li class="lines"> <a href="index.html">Home</a> </li>
-                    <li class="lines"> <a href="fractalTree.html">Frac</a> </li>
-                    <li class="lines"> <a href="clips.html">Clips</a> </li>
-                    <li class="lines"> <a href="contact.html">About me</a> </li>
+                    <li class="tl lines"> <a href="index.html">Home</a> </li>
+                    <li class="tl lines"> <a href="courses.html">Courses</a></li>
+                    <li class="tl lines"> <a href="hobby.html">Hobby</a></li>
+                    <li class="tl lines"> <a href="clips.html">Clips</a> </li>
+                    <li class="tl lines"> <a href="fractalTree.html">Frac</a> </li>
                 </ul>
             </nav>
         </div>
@@ -31,18 +33,21 @@
     <div class="heroimage">
         <div class="heroitems">
             <div class="container">
-                <video id="beat-saber" controls  disablePictureInPicture controlsList="nodownload">
+                <video id="beat-saber" controls disablePictureInPicture controlsList="nodownload">
                     <source src="/images/spinEternally.mp4" type="video/mp4">
                 </video>
-                <h3>That part of "spin eternally" that nobody believes I passed</h3>
             </div>
         </div>
     </div>
     <script>
-        var vid = document.getElementById("beat-saber");
+        let vid = document.getElementById("beat-saber");
         vid.volume = 0.1;
     </script>
     <script src="js/switch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
