--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
     <div class="heroimage">
         <div class="heroitems">
             <div class="container">
-                <h2 class="glow">Evan Rodgers</h2>
+                <h2 id="main-h2" class="glow">Evan Rodgers</h2>
             </div>
         </div>
     </div>
     <div class="clearfix"></div>
+    <section class="newsletter"></section>
     <main id="main-section" class="bg-light">
         <button id="screen-button" onclick="screenMode()" class="fas fa-sun"></button>
         <section class="main-padding">
@@ -60,14 +61,96 @@
                 </div>
             </div>
         </section>
-        <div class="clearfix"></div> 
-        <section class="newsletter">
-            <div class="container newsletter-grid">
-                <!-- <h1>Connect with me</h1>
-                <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button"><i
-                        class="fab fa-linkedin-in"></i></a> -->
+
+
+        <section class="newsletter"></section>
+
+        <div class="course-grid">
+            <h4 class="sub-heading">Completed</h4>
+            <h2 class="heading">Courses</h2>
+            <div class="course-carousel">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="10000">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="course-item">
+                                <h2>Computer Mediated Communications</h2>
+                                <p>Introduction to the tools and technologies of modern responsive web design using
+                                    HTML5
+                                    and
+                                    CSS3; an introduction to JavaScript.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="course-item">
+                                <h2>Computer programming I</h2>
+                                <p>Introduction to algorithms, elements of a programming language, including data types,
+                                    packages, control structures, procedures and functions, basic input and output,
+                                    arrays
+                                    and
+                                    records, text files, strings, variant records.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="course-item">
+                                <h2>Computer Programming and Linear Data Structures</h2>
+                                <p>Abstract data types, generics, access or pointer types, dynamic memory allocation,
+                                    recursion,
+                                    concurrent programming and linear data structures, including stacks, lists and
+                                    queues.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="course-item">
+                                <h2>Data Structures</h2>
+                                <p>Design and implementation of hash tables, general trees, search trees, balanced trees
+                                    and
+                                    graphs. Comparison of sorting algorithms. Evaluation of the best data structure for
+                                    a
+                                    particular task.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="course-item">
+                                <h2>Computer Systems I</h2>
+                                <p>Binary data representation, the assembly and machine language representations of
+                                    executable
+                                    code, memory hierarchies, process memory organization, and program linking.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="course-item">
+                                <h2>Formal Lang & Functional Programming</h2>
+                                <p>Proof techniques. Introduction to the formal language classes and their machines,
+                                    including
+                                    regular languages and finite automata, context free languages and pushdown automata.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
-        </section>
+        </div>
+
+
+
+        <section class="newsletter"></section>
         <footer class="main-footer bg-light" id="footer-section">
             <div class="container footer-grid">
                 <div class="footer">
@@ -84,17 +167,24 @@
                 <div class="footer">
                     <h4 class="sub-heading">CONNECT WITH ME</h4>
                     <a href="https://www.linkedin.com/in/evan-rodgers/" target="blank_" class="button"><i
-                        class="fab fa-linkedin-in"></i></a>
+                            class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="copyright">
-                <i class="far fa-copyright"> Copyright 2022 All rights reserved | Evan Rodgers</i>
+
+                <p><i class="far fa-copyright"></i> Copyright 2022 All rights reserved | Evan Rodgers</p>
             </div>
         </footer>
     </main>
     <script src="js/switch.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
 
