--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+    <!-- Page Loader -->
+    <div id="loadingDiv">
+        <div class="loader spinner"></div>
+    </div>
     <header>
         <div class="header-grid">
             
@@ -242,6 +246,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/scroll.js"></script>
     <script src="js/contact.js"></script>
+    <script src="js/pageloader.js"></script>
 </body>
 
 </html>
